# Neuro-Imager

./: .gitignore  README.md  pyproject.toml
scripts/: example.py
src/neuro_imaging_tool/: __init__.py  cli.py  gifti_viewer.py  viewer.py
studies/Freidrich et al 24/: README.md
studies/Freidrich et al 24/data/Gradients_Margulies2016/: README.md
studies/Freidrich et al 24/data/Gradients_Margulies2016/fsaverage/: hcp.embed.grad_1.L.fsa.func.gii  hcp.embed.grad_1.L.fsa4.func.gii  hcp.embed.grad_1.L.fsa6.func.gii  hcp.embed.grad_1.R.fsa.func.gii  hcp.embed.grad_1.R.fsa4.func.gii  hcp.embed.grad_1.R.fsa6.func.gii  hcp.embed.grad_2.L.fsa.func.gii  hcp.embed.grad_2.L.fsa4.func.gii  hcp.embed.grad_2.L.fsa6.func.gii  hcp.embed.grad_2.R.fsa.func.gii  hcp.embed.grad_2.R.fsa4.func.gii  hcp.embed.grad_2.R.fsa6.func.gii  hcp.embed.grad_3.L.fsa.func.gii  hcp.embed.grad_3.L.fsa4.func.gii  hcp.embed.grad_3.L.fsa6.func.gii  hcp.embed.grad_3.R.fsa.func.gii  hcp.embed.grad_3.R.fsa4.func.gii  hcp.embed.grad_3.R.fsa6.func.gii  hcp.embed.grad_4.L.fsa.func.gii  hcp.embed.grad_4.L.fsa4.func.gii  hcp.embed.grad_4.L.fsa6.func.gii  hcp.embed.grad_4.R.fsa.func.gii  hcp.embed.grad_4.R.fsa4.func.gii  hcp.embed.grad_4.R.fsa6.func.gii  hcp.embed.grad_5.L.fsa.func.gii  hcp.embed.grad_5.L.fsa4.func.gii  hcp.embed.grad_5.L.fsa6.func.gii  hcp.embed.grad_5.R.fsa.func.gii  hcp.embed.grad_5.R.fsa4.func.gii  hcp.embed.grad_5.R.fsa6.func.gii
studies/Freidrich et al 24/data/Gradients_Margulies2016/scripts/: x.fs2mni.sh  x.hcp2fs.sh
studies/Sydnor et al 21 - Archetypal S-A Axis/: README.md
