[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-imaging-personal-project"
version = "0.1.0"
description = "Personal neuroimaging tool built as a wrapper around Cerebro_Viewer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Cerebro-Viewer>=0.0.10.5",
  "matplotlib>=3.8",
  "nibabel>=5.2",
]

[project.scripts]
neuro-viewer = "neuro_imaging_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
